<resources>
    <string name="app_name">Temu_App</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="up_to_90_days">Up to 90 days</string>
    <string name="free_returns">Free Returns</string>
    <string name="on_all_orders">On all orders</string>
    <string name="all_data_is_encrypted">All data is encrypted</string>
    <string name="free_shipping">Free Shipping</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="continue_with_phone_number">Continue with Phone Number</string>
    <string name="continue_with_x">Continue with X</string>
    <string name="trouble_signing_in">Trouble signing in?</string>
    <string name="by_contuning_you_agree_to_our_terms_of_use_and_privacy_n_policy">By continuing you agree to our terms of use and privacy \n policy</string>
    <string name="by_continuing_you_agree_to_our_terms_of_use_and_privacy_policy_you_will_receive_an_sms_for_verification_purposes_only_message_and_data_rates_may_apply">By continuing, you agree to our Terms of Use and Privacy Policy. You will receive an SMS for verification purposes only. Message and data rates may apply.</string>
    <string name="continue_text">Continue</string>
    <string name="sign_in_or_register_with_your_phone_numnber">Sign in or register with your phone number</string>
    <string name="sign_in_or_register_with_your_phone_number">Sign in or register with your phone number</string>
    <string name="please_enter_your_email_address">Please enter your email address</string>
    <string name="by_continuing_you_agree_to_our_terms_of_use_and_privacy_policy">By Continuing, you agree to our Terms of use and Privacy Policy</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart_fragment">Cart Fragment</string>
    <string name="category_fragment">Category Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="by_continuing_you_agree_to_our_terms_of_use_and_privacy_n_policy">By continuing you agree to our terms of use and privacy \n policy</string>
    <string name="trouble_signing_in_">Trouble signing in</string>
    <string name="sign_in_for_the_best_experience">Sign in for the best experience</string>
    <string name="home_fragment2">Home Fragment</string>
    <string name="navigation_tabs_for_selecting_different_categories">Navigation tabs for selecting different categories</string>
    <string name="camera">Camera</string>
    <string name="product_image">Product Image</string>
    <string name="product_description_goes_here">Product description goes here.</string>
    <string name="price_20_00">Price: $20.00</string>
    <string name="_143_sold">143 Sold</string>
    <string name="your_shopping_cart_is_empty">Your shopping cart is empty</string>
    <string name="add_your_favorite_items_in_it">Add your favorite items in it</string>
    <string name="free_shipping_and_free_returns">FREE SHIPPING AND FREE RETURNS</string>
    <string name="cart2">Cart</string>
    <string name="delivery_guarantee">Delivery guarantee</string>
    <string name="temu_purchase_protection">Temu purchase protection</string>
    <string name="secure_privacy">Secure privacy</string>
    <string name="safe_payment_option">Safe payment option</string>
    <string name="free_shipping_on_all_orders">FREE SHIPPING ON ALL ORDERS</string>
    <string name="category2">Category</string>
    <string name="todocheck">TODOcheck</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="description">description</string>
    <string name="messages">Messages</string>
    <string name="promotions">Promotions</string>
    <string name="a_thank_you_gift_awards">A thank you gift awards</string>
    <string name="keep_up_with_your_orders">Keep up with your orders</string>
    <string name="order_and_shipping">Order and Shipping</string>
    <string name="message">Message</string>
    <string name="sign_in_register">Sign in / Register</string>
    <string name="your_orders">Your orders</string>
    <string name="your_reviews">Your reviews</string>
    <string name="coupons_and_offers">Coupons and offers</string>
    <string name="credit_balance">Credit balance</string>
    <string name="addresses">Addresses</string>
    <string name="settings">Settings</string>
    <string name="your_order">Your Order</string>
    <string name="you_don_t_have_any_order">You don\'t have any order</string>
    <string name="your_review">Your Review</string>
    <string name="you_don_t_have_any_review">You don\'t have any review</string>

</resources>