<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="4dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardBackgroundColor="@color/white"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="4dp"
        android:padding="8dp">

        <!-- Product Image centered -->
        <ImageView
            android:id="@+id/productImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerInside"
            android:contentDescription="@string/product_image"
            android:src="@drawable/camera"
            android:layout_gravity="center" />

        <!-- Product Name aligned to left -->
        <TextView
            android:id="@+id/productName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp" />

        <!-- Product Description aligned to left -->
        <TextView
            android:id="@+id/productDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_description_goes_here"
            android:textColor="@color/gray"
            android:textSize="14sp"
            android:layout_marginTop="8dp" />

        <!-- Product Price aligned to left -->
        <TextView
            android:id="@+id/productPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_20_00"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="8dp" />

        <!-- Product Quantity aligned to left -->
        <TextView
            android:id="@+id/productQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_143_sold"
            android:textColor="@color/gray"
            android:textSize="14sp"
            android:layout_marginTop="4dp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>
