<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CartFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cart2"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:padding="16dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/fade_black"/>

    <LinearLayout
        android:id="@+id/free_shipping"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="15dp"
        android:paddingHorizontal="15dp"
        android:gravity="center_vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="5dp"
            android:src="@drawable/chec"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:text="@string/free_shipping_and_free_returns"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/fade_black"/>

    <LinearLayout
        android:id="@+id/shopping_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="15dp"
        android:paddingHorizontal="15dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/trolley" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/your_shopping_cart_is_empty"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/add_your_favorite_items_in_it"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:gravity="center" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/fade_black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingVertical="15dp"
        android:paddingHorizontal="15dp"
        android:gravity="center_vertical"
        android:weightSum="4">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingVertical="15dp"
            android:paddingHorizontal="10dp"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/insurance" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/safe_payment_option"
                android:textColor="@color/gray"
                android:textSize="16sp"
                android:gravity="center"
                android:maxLines="2"
                android:ellipsize="end" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingVertical="15dp"
            android:paddingHorizontal="10dp"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/padlock" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/secure_privacy"
                android:textColor="@color/gray"
                android:textSize="16sp"
                android:gravity="center"
                android:maxLines="2"
                android:ellipsize="end" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingVertical="15dp"
            android:paddingHorizontal="10dp"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/checkout" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/temu_purchase_protection"
                android:textColor="@color/gray"
                android:textSize="16sp"
                android:gravity="center"
                android:maxLines="2"
                android:ellipsize="end" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingVertical="15dp"
            android:paddingHorizontal="10dp"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/bus" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/delivery_guarantee"
                android:textColor="@color/gray"
                android:textSize="16sp"
                android:gravity="center"
                android:maxLines="2"
                android:ellipsize="end" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/fade_black"/>

</LinearLayout>
